posiGen_FullsendBox/src/objects/Sales_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001jWqNEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_1__c</fullName>
        <label>Bill to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_2__c</fullName>
        <label>Bill to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <label>Bill to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Company_Name__c</fullName>
        <label>Bill to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <label>Bill to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Name__c</fullName>
        <label>Bill to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <label>Bill to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <label>Bill to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intacct Entity</label>
        <referenceTo>Intacct_Entity__c</referenceTo>
        <relationshipLabel>Sales Quotes</relationshipLabel>
        <relationshipName>Sales_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001jWqZEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Entity</label>
        <referenceTo>Intacct_Entity__c</referenceTo>
        <relationshipLabel>Sales Quotes (Parent Entity)</relationshipLabel>
        <relationshipName>Sales_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_1__c</fullName>
        <label>Ship to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_2__c</fullName>
        <label>Ship to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company_Name__c</fullName>
        <label>Ship to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Ship to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <label>Ship to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <label>Ship to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>